cluster/homelab/apps/freshrss/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: freshrss
    namespace: freshrss
    annotations:
        gethomepage.dev/enabled: ENC[AES256_GCM,data:fAvkEw==,iv:E6IVO/Q20sH/6pjblZNhSxfWcS10YW2mS1s9bPWHEPE=,tag:sz38jDW9F7q3xAHAZ2Ksnw==,type:str]
        gethomepage.dev/description: ENC[AES256_GCM,data:aFmBHeLA/scOpg==,iv:pQ4JdY+oOHIWUh61JDWQW1r9vv5o/aVsB+7ZuqSpb7U=,tag:PLV55gsv4pE8a1iTKmobnA==,type:str]
        gethomepage.dev/group: ENC[AES256_GCM,data:lya4A+xwy4Ns,iv:Yl84whMhjDv2lRLTLeJ7pi+SVqq83ryVddulnwxRb5M=,tag:2ypThJnwoSPUHunSwshpgQ==,type:str]
        gethomepage.dev/icon: ENC[AES256_GCM,data:JxhzLdsl4Dc=,iv:+IRH++pSt5HDA+HlhZ5QO7Z2xV1TZ9nZbxl5u3DJZfM=,tag:7eCcH6POZDhwYnx+dyQeNw==,type:str]
        gethomepage.dev/name: ENC[AES256_GCM,data:8X0QXgj4SYeX,iv:/SuBeaUf2vlve9fb112YekMPA1yhogjr6Lt0nNooeP0=,tag:XquFtefNUPFQ3hkUjI4pZA==,type:str]
        gethomepage.dev/widget.type: ENC[AES256_GCM,data:ROGD5ZlYqe4=,iv:AfseuQ+R8kYco+5iotUSGgBR3I33hCw7uWSjyywMtog=,tag:WjTfQMQl41VW4swGOhMCKA==,type:str]
        gethomepage.dev/widget.url: ENC[AES256_GCM,data:U6XmuLoL2jHTSXQm43Gy0Me0BG8VCJsna3JpogohhvcL,iv:jC9TDxLmz7fkNaz7oyXP0Y12CpqwUJMKBvYSK6K+uwM=,tag:YKcFMYFeYp9vH8n61tg9gg==,type:str]
        gethomepage.dev/widget.username: ENC[AES256_GCM,data:/YRGRFmt,iv:U2HGt3w88P0b1o/ZHIg4ABhRO6796VOfyJ/4ZYczZY8=,tag:kaSymwOAYeb+JmZx2TuRng==,type:str]
        gethomepage.dev/widget.password: ENC[AES256_GCM,data:yi+DksgPWeaLp6S3oszPyp0Yeg==,iv:VqcRZf2jmkiXewe/XhniNCVDUmBbMIsp+sYQCkKydUE=,tag:gdalzHnGFJGF9RBlBcdm9Q==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1mq6usjzvvxvcp7tl03yjdqd0kgjhhvhz48kmg86p43nhx0jc75jssw0kfn
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3bWhqMUJVWmFjQlRuc1dK
[...]
            ONk7WlI+tEm3Ozz2drN+AtxkhkpTq9kfBVitDZDrEyMH7h4+eltXHQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-03-16T12:25:40Z"
    mac: ENC[AES256_GCM,data:6m6RabZrYPi9V76+brEuERz2zS3Hp6KCupTl+tJcIFsdQcz9XU0F7yKylReiMIivAziNohB8LWua+gZkNeb3j2Hf9n1Gav07NY38ox1h547Zq/nS24bEXxJp9GLzK9zzrLGDPKqKVWdlvGRpCNv8cdNsvxnA9ohMimP+3GxUwyk=,iv:Q3Cve+yyq8vSM0Lfeq+ntyTCqLqK6X2lg5d297406hg=,tag:u47fN9oxrxtHQinkzBmgSA==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|annotations|host)$
    version: 3.8.1
