cluster/homelab/apps/freshrss/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: freshrss
    namespace: freshrss
    annotations:
        kubernetes.io/ingress.class: "nginx"
        gethomepage.dev/enabled: "true"
        gethomepage.dev/description: RSS Reader
        gethomepage.dev/group: News
        gethomepage.dev/icon: freshrss
        gethomepage.dev/name: Fresh RSS
